--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
     />
     <!-- Bootstrap fin -->
     <title>Contacto</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/scss/style.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
