--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -12,7 +12,7 @@
     />
     <!-- Bootstrap fin -->
     <title>Servicios</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../styles/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
