se quita carrousel de index y se cambia por jumbotron

--- a/src/index.html
+++ b/src/index.html
@@ -66,14 +66,24 @@
         </div>
       </nav>
     </header>
+    <br /><br /><br /><br />
     <main class="base-content">
       <br />
       <!-- navbar fin -->
+      <!-- jumbotron inicia -->
+      <div class="jumbotron p-5 rounded">
+        <p>
+          "Experimenta la maestría en peluquería con nuestro experto" <br />
+          ¡Una experiencia única y transformadora!
+        </p>
+      </div>
+      <br />
+      <!-- jumbotron fin -->
       <!-- Carousel -->
-      <section class="base-section">
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- Indicators/dots -->
-          <div class="carousel-indicators">
+      <!-- <section class="base-section">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel"> -->
+      <!-- Indicators/dots -->
+      <!-- <div class="carousel-indicators">
             <button
               type="button"
               data-bs-target="#demo"
@@ -95,10 +105,10 @@
               data-bs-target="#demo"
               data-bs-slide-to="3"
             ></button>
-          </div>
+          </div> -->
 
-          <!-- The slideshow/carousel -->
-          <div class="carousel-inner">
+      <!-- The slideshow/carousel -->
+      <!-- <div class="carousel-inner">
             <div class="carousel-item active">
               <img
                 src="../img/jpelu2.webp"
@@ -127,10 +137,10 @@
                 class="d-block w-100"
               />
             </div>
-          </div>
+          </div> -->
 
-          <!-- Left and right controls/icons -->
-          <button
+      <!-- Left and right controls/icons -->
+      <!-- <button
             class="carousel-control-prev"
             type="button"
             data-bs-target="#demo"
@@ -147,7 +157,7 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Article -->
       <section class="base-section">
         <article class="art1 container-fluid">
