traspaso de estilos scss a css

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,7 +12,7 @@
     />
     <!-- Booetstrap fin -->
     <title>Productos</title>
-    <link rel="stylesheet" href="../styles/scss/style.scss" />
+    <link rel="stylesheet" href="../styles/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
