--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
     />
     <!-- bs 5.1 fin -->
     <title>Nosotros</title>
-    <link rel="stylesheet" href="../styles/scss/style.scss" />
+    <link rel="stylesheet" href="../styles/css/style.css" />
     <link
       rel="shortcut icon"
       href="../img/scissors-2702564_640.webp"
