--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,12 +75,12 @@
     <br />
     <!-- jumbotron fin -->
     <h2>Trayectoria</h2>
-    <article>
+    <article class="art1 container-fluid">
       <div class="container-fluid">
         <div class="row">
           <div class="nleft col-sm-4"></div>
           <div class="nright col-sm-8">
-            <h3>Peluquería Jorge Escobar</h3>
+            <h2>Peluquería Jorge Escobar</h2>
             <p>
               "En septiembre de 1996, se tomó la decisión de establecer un local
               en la ciudad de San Fernando con el objetivo de alcanzar a un
@@ -105,7 +105,7 @@
     <h2>Nuestro Equipo</h2>
     <br />
     <div class="d-inline-flex">
-      <div class="card card1" style="width: 18rem">
+      <div class="card card1" style="width: 22rem">
         <img src="../img/gloria1.webp" class="card-img-top" alt="Gloria" />
         <div class="card-body">
           <h5 class="card-title">Gloria</h5>
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="d-inline-flex">
-      <div class="card card2" style="width: 18rem">
+      <div class="card card2" style="width: 22rem">
         <img src="../img/fernanda1.webp" class="card-img-top" alt="Fernanda" />
         <div class="card-body">
           <h5 class="card-title">Fernanda</h5>
@@ -131,7 +131,7 @@
       </div>
     </div>
     <div class="d-inline-flex">
-      <div class="card card3" style="width: 18rem">
+      <div class="card card3" style="width: 22rem">
         <img src="../img/barbara1.webp" class="card-img-top" alt="Barbara" />
         <div class="card-body">
           <h5 class="card-title">Barbara</h5>
@@ -144,7 +144,7 @@
       </div>
     </div>
     <div class="d-inline-flex">
-      <div class="card card4" style="width: 18rem">
+      <div class="card card4" style="width: 22rem">
         <img src="../img/catalina1.webp" class="card-img-top" alt="Catalina" />
         <div class="card-body">
           <h5 class="card-title">Catalina</h5>
