--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- fontawesome inicia -->
     <link
       rel="stylesheet"
@@ -29,10 +36,18 @@
     />
   </head>
   <body class="base-layout">
-    <!-- navbar ini-->
     <header class="base-header">
-      <nav class="navbar navbar-expand-sm navbar-dark">
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
+          <div class="col-6 d-sm-none">
+            <a class="navbar-brand" href="#">
+              <img
+                src="../img/logo pelu-fotor-bg-remover-20230922195459.png"
+                alt="Logo de la empresa"
+                class="img-fluid"
+              />
+            </a>
+          </div>
           <button
             class="navbar-toggler"
             type="button"
@@ -42,12 +57,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse d-flex justify-content-end"
+            class="collapse navbar-collapse justify-content-end"
             id="collapsibleNavbar"
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../src/index.html">Home</a>
+                <a class="nav-link" href="../src/index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
@@ -66,9 +81,6 @@
         </div>
       </nav>
     </header>
-    <main class="base-content">
-      <br />
-      <!-- navbar fin -->
     <br />
     <section></section>
     <div
