--- a/src/index.html
+++ b/src/index.html
@@ -195,29 +195,31 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="base-footer container-fluid">
-      <div class="row">
-        <div class="redes col-sm-6">
-          <h3>Contacto</h3>
-          <p>Dirección: Cardenal Caro 761, San Fernando, Chile.</p>
-          <p>Teléfono: +56722714219</p>
+    <footer class="base-footer">
+      <footer class="container-fluid">
+        <div class="row">
+          <div class="redes col-sm-6">
+            <h3>Contacto</h3>
+            <p>Dirección: Cardenal Caro 761, San Fernando, Chile.</p>
+            <p>Teléfono: +56722714219</p>
+          </div>
+          <div class="redesSociales col-sm-6">
+            <h3>Síguenos en facebook</h3>
+            <ul class="social-links">
+              <li>
+                <a
+                  href="https://www.facebook.com/p/Jorge-Escobar-Peluquerias-100070608200556/"
+                  target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-12">
+            <p>Todos los derechos reservados</p>
+          </div>
         </div>
-        <div class="redesSociales col-sm-6">
-          <h3>Síguenos en facebook</h3>
-          <ul class="social-links">
-            <li>
-              <a
-                href="https://www.facebook.com/p/Jorge-Escobar-Peluquerias-100070608200556/"
-                target="_blank"
-                ><i class="fab fa-facebook"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-12">
-          <p>Todos los derechos reservados</p>
-        </div>
-      </div>
+      </footer>
     </footer>
     <!-- bundle inicia -->
     <script
