se modifican saltos de linea

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
     <!-- bs 5.1 fin -->
-    <title>Inicio</title>
+    <title>Servicios</title>
     <link rel="stylesheet" href="../styles/css/style.css" />
     <link
       rel="shortcut icon"
@@ -81,7 +81,7 @@
         </div>
       </nav>
     </header>
-    <br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
     <section></section>
     <div
       id="carouselExampleIndicators"
