--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header><br><br><br><br><br><br>
 <main class="contact">
     <h2>Contacto</h2><br>
     <div class="contact-content">
